--- a/doc-Self_Service_User_Interface_Guide/topics/My_Services_Tab.adoc
+++ b/doc-Self_Service_User_Interface_Guide/topics/My_Services_Tab.adoc
@@ -12,7 +12,7 @@ image:sui-services.png[]
 
 Click on a service to see more details, including information about associated virtual machines and snapshots under *Resources*, and associated parent catalog item under *Relationships*.
 
-Virtual Machine dashboard:
+.Virtual Machine dashboard:
 
 You can click on the virtual machine name or *View Details* under more options _(represented by three dots)_, to see the virtual machine dashboard. The dashboard shows more information of the virtual machine resource, including compliance, retirement, snapshots, timeline of power events, utlilization of CPU, Memory, and Storage, Smart State analysis, tags, custom attributes, disk usage. Additionally, you can also perform power operations at the resource level, and view and create snapshots. 
 
