--- a/doc-Self_Service_User_Interface_Guide/topics/My_Services_Tab.adoc
+++ b/doc-Self_Service_User_Interface_Guide/topics/My_Services_Tab.adoc
@@ -4,30 +4,27 @@
 
 The *My Services* tab lists all service requests individually with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
 
-On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service by clicking more options _(represented by three dots)_ next to the service. You also have options to perform power operations, that is start, stop, or suspend, at the service level. 
+On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service by clicking more options _(represented by three dots)_ next to the service. You also have options to perform power operations, that is start, stop, or suspend, at the service level. You can choose to click on a service where you can perform all of these actions at the service level using the designated buttons located at the top of the screen, as well as access the virtual machine dashboard, manage snapshots, and open the virtual machine and web console from under the *Resources* section. You can also control power operations and life cycle of virtual machine resources via more options _(represented by three dots)_.
+   
+image:ssui-my-services.png[]
 
-You can perform most of the above tasks in bulk (except editing service details and power operations). To do so, select multiple services and then click the designated button for the required task on the upper right corner of the screen.    
+image:ssui-my-service-details.png[]
 
-image:sui-services.png[]
+.Virtual Machine Dashboard:
 
-Click on a service to see more details, including information about associated virtual machines and snapshots under *Resources*, and associated parent catalog item under *Relationships*.
+From the *My Services* screen, click on a service and then on the virtual machine name or *View Details* under more options _(represented by three dots)_ to access the virtual machine dashboard. The dashboard displays the following information about the virtual machine resource:
 
-.Virtual Machine dashboard:
+* Compliance
+* Retirement
+* Snapshots
+* Timeline of power events
+* Utilization of CPU, Memory, and Storage
+* Smart State analysis
+* Tags
+* Custom attributes
+* Disk usage 
 
-You can click on the virtual machine name or *View Details* under more options _(represented by three dots)_, to see the virtual machine dashboard. The dashboard shows more information of the virtual machine resource, including compliance, retirement, snapshots, timeline of power events, utlilization of CPU, Memory, and Storage, Smart State analysis, tags, custom attributes, disk usage. Additionally, you can also perform power operations at the resource level, and view and create snapshots. 
-
-Click *Snapshots* to view available snapshots, or create or delete snapshots via the *Configuration* button on the next screen. A snapshot is a copy of the virtual machine's disk file (VMDK) that captures the entire state of the virtual machine at a point in time. Click *Revert* under more options _(represented by three dots)_ to return a virtual machine to a previous state when you took the snapshot.
-
-[[html5-console]]
-=== Accessing the HTML5 Console
-
-Follow this procedure to get HTML5 console access to the virtual machine. The console is the remote control system that enables you to interact directly with your virtual machines. 
-
-. From the *Services* screen, click on the required service.
-. In *Resources*, click the image:ssui-access-button.png[Access Button] button next to the virtual machine and select *Open HTML5 Console*.
-image:ssui-access-console-nb.png[]
-
-The HTML5 console will open in a new window of your web browser. Note that you may have to enable the pop-up settings in your browser to access the console.
+Additionally, you can also control the virtual machine power operations, and manage snapshots from the dashboard. A snapshot is a copy of the virtual machine's disk file (VMDK) that captures the entire state of the virtual machine at a point in time.
 
 [[schedule-retirement]]
 === Setting a Retirement Date for a Service
@@ -87,27 +84,6 @@ Follow this procedure to edit the name and description of a service.
 image:ssui-edit-service.png[]
 . Click *Save*.
 
-=== Cockpit Integration
-
-Cockpit is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While Cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
-
-The {product-title} full administrative user interface and the Self Service user interface have enabled for users to access the Cockpit interface for a given virtual machine. 
-
-==== Accessing the Cockpit Interface
-
-[NOTE]
-====
-Cockpit must be pre-configured and running on the virtual machine. 
-====
-
-You can open the Cockpit console for a virtual machine from the image:ssui-access-button.png[Access Button] button. 
-
-. From the *My Services* screen, click on the service associated with the virtual machine you want to open the Cockpit console for.
-. In *Resources*, click *Access* next to the virtual machine and select *Open Cockpit Console*. A notification will appear to show the Cockpit interface is loading. 
-. The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
-image:cockpit-login-nb.png[Cockpit Login]
-. Once you have logged in, you will see the tabs for the dashboard and the individual machines added to Cockpit. 
-image:cockpit-ui-nb.png[Cockpit UI]
 
 [[vm-power-operations]]
 === Controlling Virtual Machine Power States
@@ -116,7 +92,6 @@ Follow this procedure to perform power operations on virtual machines, such as s
 
 . From the *My Services* screen, click on the required service.
 . Under *Resources*, click more options _(represented by three dots)_ where you have the option to start, stop, or suspend the virtual machine. Alternatively, click on the virtual machine name to see more details about the resource, including the *Power Operations* button.
-
 
 [[create-snaphots]]
 === Creating Virtual Machine Snapshots
@@ -145,3 +120,44 @@ To create a snapshot from the Resources screen:
 
 . From the *My Services* screen, click on the service associated with the virtual machine you want to view snapshots for.
 . In *Resources*, click *Snapshots* next to the virtual machine and select *View* to view available snapshots. Alternatively, click on the virtual machine, then click *Snapshots* to view available snapshots.
+
+[NOTE]
+====
+You can revert or delete a snapshot from the snapshot summary screen by navigating to *Snapshots* > *View*. Click more options _(represented by three dots)_ next to the snapshot you want to revert or delete, then click *Revert* or *Delete* as required. Revert returns a virtual machine to a previous state when you took the snapshot.
+====
+
+
+
+[[html5-vm-console]]
+=== Accessing the Virtual Machine Console
+
+Follow this procedure to open a console window to the virtual machine. The console is the remote control system that enables you to interact directly with your virtual machines. 
+
+. From the *Services* screen, click on the required service.
+. In *Resources*, click the image:ssui-access-button.png[Access Button] button next to the virtual machine and select *VM Console*.
+
+The virtual machine console will open in a new window of your web browser. Note that you may have to enable the pop-up settings in your browser to access the console.
+
+=== Web Console (Cockpit) Integration
+
+The Web console (Cockpit) is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While Cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
+
+The {product-title} full administrative user interface and the Self Service user interface have enabled for users to access the Web console (Cockpit interface) for a given virtual machine. 
+
+==== Accessing the Web Console
+
+[NOTE]
+====
+Launching of Cockpit requires as IP address for the virtual machine. It must be pre-configured and running on the virtual machine. 
+====
+
+You can open the Web console (Cockpit) for a virtual machine from the image:ssui-access-button.png[Access Button] button. 
+
+. From the *My Services* screen, click on the service associated with the virtual machine you want to open the Web console for.
+. In *Resources*, click *Access* next to the virtual machine and select *Web Console*. A notification will appear to show the Cockpit interface is loading. 
+. The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
+image:cockpit-login-nb.png[Cockpit Login]
+. Once you have logged in, you will see the tabs for the dashboard and the individual machines added to Cockpit. 
+image:cockpit-ui-nb.png[Cockpit UI]
+
+
