--- a/doc-Self_Service_User_Interface_Guide/topics/My_Services_Tab.adoc
+++ b/doc-Self_Service_User_Interface_Guide/topics/My_Services_Tab.adoc
@@ -123,7 +123,7 @@ To create a snapshot from the Resources screen:
 
 [NOTE]
 ====
-You can revert or delete a snapshot from the snapshot summary screen by navigating to *Snapshots* > *View*. Click more options _(represented by three dots)_ next to the snapshot you want to revert or delete, then click *Revert* or *Delete* as required. Revert returns a virtual machine to a previous state when you took the snapshot.
+You can revert or delete a snapshot only from the snapshot summary screen. To do so, navigate to *Snapshots* > *View*, click more options _(represented by three dots)_ next to the snapshot you want to revert or delete, and then click *Revert* or *Delete* as required. Revert returns a virtual machine to a previous state when you took the snapshot.
 ====
 
 
