manually cherry-picking all the changes from PR #728 to gaprindashvili

--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -23,8 +23,8 @@ include::common/configuration.adoc[]
 // [[Additional_Configuration]]
 // include::topics/additional_configuration.adoc[]
 
-[[Initial_Login]]
-include::common/initial-login.adoc[]
+[[Post-Installation]]
+include::topics/post-installation.adoc[]
 
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
@@ -36,6 +36,7 @@ include::topics/troubleshooting.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
 
 
 
