--- a/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
@@ -3,7 +3,7 @@
 
 Under normal circumstances, the deployment process takes approximately 10 minutes. If the deployment is unsuccessful, examining deployment events and pod logs can help identify any issues.
 
-. As a basic user, first retry the failed deployment:
+. As a regular user, first retry the failed deployment:
 +
 ------
 $ oc get pods
@@ -52,28 +52,3 @@ log/sync_pv_data_1477272010.log
 sent 72 bytes  received 1881 bytes  1302.00 bytes/sec
 total size is 1585  speedup is 0.81
 ------
-
-
-
-[[uninstalling]]
-=== Uninstalling {product-title} from a Project
-
-If no longer needed, you can uninstall the {product-title} pod from your project. Note the following commands do not remove SCC permissions, or the project itself.
-
-[IMPORTANT]
-====
-Use this procedure if only {product-title} exists in the project.
-====
-
-. Inside the project, run the following as a basic user:
-+
-------
-$ oc delete all --all
-------
-+
-. Wait approximately 30 seconds for the command to process, then run:
-+
-------
-$ oc delete pvc --all
-------
-
